[project]
name = "invoke-tasks"
version = "0.2.0"
description = "Reusable invoke tasks for Python projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "invoke>=2.2.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoke_tasks"]
